fix group name alignment
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@23047 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_contacts.scss
+++ b/src/main/resources/scss/_contacts.scss
@@ -995,6 +995,7 @@ div.contact-buttons {
 				@include ellipse;
 				max-width: 480px;
 				display: inline-block;
+				vertical-align: bottom;
 			}
 
 			span{
